# EchoBird

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  FRONTEND_QUALITY.md  PROGRESS_HANDOFF.md  README.md  README.zh-CN.md  SECURITY_AUDIT.md  STAGE4_TEST_REPORT.md  TRAY_FEATURE_TEST.md  echobird-debug.keystore  echobird-mobile.apk.idsig  fix_icon_and_4png.py  fix_readmes_utf8.py  fix_rust.js  fix_rust.mjs  index.html  lint-output.txt  package-lock.json  package.json  run-repo-dev.bat  ssh-cmd-test.mjs  ssh-diag.mjs  ssh-diag2.mjs  ssh-diag3.mjs  ssh-diag4.mjs  ssh-log.mjs  ssh-pathprobe.mjs  ssh-sftp.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
.agent/: CONVENTIONS.md
.agent/scripts/: build-bridge-remote.js  deploy-bridge-remote.js
.agent/workflows/: Add Agent Tool.txt  add-agent.md  add-i18n-key.md  add-tool.md  agent-compat-watch.md  android-install.md  bridge-cli.md  bridge-remote-build.md  encoding.md  mobile-dev.md  release.md  sync-docs.md  tool-model-config.md  update-free-models.md  update-roles.md
.agents/workflows/: release.md  sync-docs.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  refresh-pulse-data.yml  release.yml  sync-docs.yml  sync-skills.yml
_agent/workflows/: README.md  update-free-models.md
_agents/workflows/: README.md  encoding.md
bridge/: Cargo.toml  bridge-darwin-aarch64  bridge-darwin-x86_64  bridge-linux-aarch64  bridge-linux-x86_64
bridge-src/: Cargo.toml
bridge-src/.cargo/: config.toml
bridge-src/src/: main.rs
bridge/src/: main.rs
docs/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  _headers  free-models.html  index.html  install.ps1  install.sh  mobile.html
docs/api/: engine-versions.json  free-models.json
docs/download/: index.html
docs/pulse/: latest-24h.json  latest-7d-en.json
docs/roles/: role-prompts.txt  roles-ja.json  roles-zh-Hans.json
docs/superpowers/: upstream-2026-05-13-echobird-app-detection-and-provider-directory.md
infra/pulse-worker/: README.md  (+1 more)
internal-docs/: 26.通用CLI-Bridge技术路线.md  27.频道页完整技术手册.md  BRIDGE_AGENT_ANALYSIS.md  CHANNELS.md  TOOLS.md
mobile-prototype/: index.html
public/: splash.html
roles/: roles-en.json  roles-zh-Hans.json
scripts/: build_en_pulse.py  filter_pulse.py  gen_roles.py  generate-icons.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  err.txt  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  bundled_commands.rs  channel_commands.rs  mod.rs  mod_stub.rs  model_commands.rs  process_commands.rs  proxy_commands.rs  role_commands.rs  secret_commands.rs  settings_commands.rs  skill_commands.rs  ssh_commands.rs  tool_commands.rs
src-tauri/src/models/: config.rs  mod.rs  model.rs  tool.rs
src-tauri/src/services/: agent_loop.rs  agent_tools.rs  auto_fix.rs  bundled_assets.rs  channel_history.rs  crypto.rs  datalog.rs  json_repair.rs  llm_client.rs  local_llm.rs  logger.rs  mod.rs  model_manager.rs  plugin_manager.rs  process_manager.rs  proxy_server.rs  tool_config_manager.rs  tool_manager.rs  tool_patcher.rs
src-tauri/src/services/codex_proxy/: codex_binary.rs  config_manager.rs  content_mapper.rs  mod.rs  onboarding_bypass.rs  protocol_converter.rs  server.rs  session_store.rs  stream_handler.rs
src-tauri/src/services/local_llm/: gpu.rs  mod.rs  model_store.rs  pid_file.rs  proxy.rs  server.rs  settings.rs  types.rs
src-tauri/src/utils/: fs_helpers.rs  mod.rs  platform.rs
tmp/: deploy-role-images.cjs  generate-role-prompts.cjs  redo-prompts.txt  role-prompts.json
tools/: README.md
(+281 files in other folders)
