[package]
name = "echobird-bridge"
version = "0.1.0"
edition = "2021"
description = "Echobird bridge for remote Agent communication via stdin/stdout JSON protocol"

[[bin]]
name = "echobird-bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", default-features = false, features = ["native-tls"] }

[profile.release]
strip = true
lto = true
opt-level = "z"  # optimize for size

