[package]
name = "echobird"
version = "3.7.9"
description = "The Nexus for Models, Agents & Vibe Coding"
authors = ["Echobird Team"]
license = "MIT"
repository = "https://echobird.ai/"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "echobird_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Platform helpers
dirs = "6"

# Crypto (Shadowsocks AEAD + API Key encryption)
aes-gcm = "0.10"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "gzip"], default-features = false }
url = "2"
urlencoding = "2"
rand = "0.8"
futures-util = "0.3"

# Time
chrono = "0.4"

# SSH client
async-ssh2-tokio = "0.12"

# Agent Loop (LLM streaming + cancellation)
reqwest-eventsource = "0.6"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

# Desktop UX
rfd = "0.15"
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"


